fixing scroll and overflow bugs

--- a/src/scss/modules/global.scss
+++ b/src/scss/modules/global.scss
@@ -24,6 +24,9 @@ body {
         // overflow-y: hidden;
       }
     }
+    .scroll-container {
+      overflow: visible !important;
+    }
   }
 }
 
