--- a/src/scss/modules/mixins.scss
+++ b/src/scss/modules/mixins.scss
@@ -12,3 +12,13 @@
   bottom: 0;
   left: 0;
 }
+
+@mixin vertical_scroll {
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+
+  &::-webkit-scrollbar {
+    width: 0 !important;
+  }
+}
