--- a/src/scss/modules/tabs.scss
+++ b/src/scss/modules/tabs.scss
@@ -14,6 +14,7 @@
   box-shadow: 0 2px 11px 6px #202731;
   white-space: nowrap;
   overflow-x: auto;
+  overflow-y: hidden;
   z-index: 90;
 
   li {
